terraform practice/awsterraform/root module/network/main.tf
#### netwroking/main.tf###

data "aws_availability_zones" "available" {}

resource "aws_vpc" "tf_vpc" {
  cidr_block = "${var.vpc_cidr}"
  enable_dns_hostnames = true
  enable_dns_support = true

  tags {
    Name = "tf_vpc"
  }
}

resource "aws_internet_gateway" "tf_internet_gateway" {
  vpc_id = "${aws_vpc.tf_vpc.id}"
  tags {
    Name = "tf_igw"
  }
}

resource "aws_route_table" "tf_public_rt" {
  vpc_id = "${aws_vpc.tf_vpc.id}"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.tf_internet_gateway.id}"
  }
}
resource "aws_default_route_table" "tf_private_rt" {
  default_route_table_id = "${aws_vpc.tf_vpc.default_route_table_id}"

  tags {
    Name = "tf_private"
  }
}

resource "aws_subnet" "tf_public_subnet" {
  count = 2
  cidr_block = "${var.public_cidrs[count.index]}"
  vpc_id = "${aws_vpc.tf_vpc.id}"
  map_public_ip_on_launch = true
  availability_zone = "${data.aws_availability_zones.available.names[count.index]}"

  tags {
    Name = "tf_public_${count.index +1}"
  }

}

resource "aws_route_table_association" "tf_public_assoc" {
  count = "${aws_subnet.tf_public_subnet.count}"
  route_table_id = "${aws_route_table.tf_public_rt.id}"
  subnet_id = "${aws_subnet.tf_public_subnet.*.id[count.index]}"
}


resource "aws_security_group" "tf_public_dg" {
  name = "tf_public_sg"
  description = "tf_public_sg"
  vpc_id = "${aws_vpc.tf_vpc.id}"

  #ssh

  ingress {
    from_port = 22
    protocol = "tcp"
    to_port = 22
    cidr_blocks = ["$var.accessip"]
  }

  ingress {
    from_port = 80
    protocol = "tcp"
    to_port = 80
    cidr_blocks = ["${var.accessip}"]
  }

  egress {
    from_port = 0
    protocol = "-1"
    to_port = 0
    cidr_blocks = ["0.0.0.0"]
  }


}
